--- a/app/views/user_mailer/invite.text.erb
+++ b/app/views/user_mailer/invite.text.erb
@@ -1,6 +1,6 @@
  Welcome, 
  
-<%= @user.login.capitalize %>  (<%= @user.email %>) has invited you to join has invited you to join this web site..
+<%= @user.login.capitalize %>  (<%= @user.email %>) has invited you to join this web site.
 To sign up or for more information go to <%= @url %>.
  	
 Thanks,
